# Rare

./: .gitattributes  .gitignore  .gitmodules  AppImageBuilder.yml  CONTRIBUTING.md  Launch.py  MANIFEST.in  Makefile  README.md  Rare.py  freeze.py  freeze_msi.py  optional_requirements.txt  pylintrc  pyproject.toml  requirements-dev.txt  requirements-flatpak.txt  requirements-full.txt  requirements-packaging.txt  requirements-presence.txt  requirements-pyside6.txt  requirements-webview.txt  requirements.txt  setup.py  start.sh  test.py  ui2py.sh
.github/: GenPKG.sh  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: _job_cx-freeze-appimage.yml  _job_cx-freeze-dmg.yml  _job_cx-freeze-msi.yml  _job_nuitka-linux.yml  _job_nuitka-macos.yml  _job_nuitka-windows.yml  _job_publish.yml  _job_pypi.yml  _job_version.yml  artifacts.yml  checks.yml  codeql.yml  job_appimage.yml  job_cx-freeze-appimage.yml  job_cx-freeze-dmg.yml  job_cx-freeze-macos.yml  job_cx-freeze-msi.yml  job_cx-freeze-zip-win.yml  job_cx-freeze-zip-windows.yml  job_cx-freeze-zip.yml  job_debian.yml  job_macos.yml  job_nuitka-linux.yml  job_nuitka-macos.yml  job_nuitka-win.yml  job_nuitka-windows.yml  job_publish.yml  job_pyinstaller-macos.yml  job_pypi.yml  job_release.yml  job_ubuntu.yml  job_version.yml  main.yml  prerelease.yml  push_tr_file.yml  python-publish.yml  release-tests.yml  release.yml  snapshot.yml  tests.yml
.tx/: config
Rare/: Dialogs.py  FlowLayout.py  GameWidget.py  Launch.py  Login.py  Main.py  MainOld.py  MainRare.py  MainWindow.py  SettingsForm.py  TabWidgets.py  __init__.py  __main__.py  config.py
Rare/Components/: MainWindow.py  TabUtils.py  TabWidget.py
Rare/Components/Dialogs/: InstallDialog.py  PathInputDialog.py
Rare/Components/Launch/: LaunchDialog.py
Rare/Start/: Launch.py  Login.py
Rare/Styles/: Obit.py  Obit.qss  RareStyle.css  RareStyle.qss  __init__.py  dark.py  dark.qss
Rare/Tabs/: Browser.py  Update.py  __init__.py
Rare/Tabs/GamesInstalled/: GameSettingsDialog.py  GameWidget.py  InstalledList.py  SettingsForm.py
Rare/Tabs/GamesUninstalled/: GameListUninstalled.py  GameWidget.py  InstallDialog.py
Rare/Tabs/Settings/: Legendary.py  LegendarySettingsForm.py  Rare.py  RareSettingsForm.py  SettingsTab.py
Rare/ext/: QtExtensions.py  SettingsForm.py
Rare/languages/: de.qm  de.ts  fr.qm  fr.ts
Rare/utils/: LegendaryApi.py  Models.py  QtExtensions.py  RareConfig.py  RareUtils.py  constants.py  legendary.py  legendaryConfig.py  legendaryUtils.py  utils.py
Rare/utils/Dialogs/: ImportDialog.py  InstallDialog.py  PathInputDialog.py  SyncSavesDialog.py
Styles/: style.qss
custom_legendary/: __init__.py  cli.py  core.py
custom_legendary/api/: egs.py
custom_legendary/downloader/: manager.py  workers.py
custom_legendary/lfs/: egl.py  lgndry.py
custom_legendary/models/: chunk.py  downloading.py  egl.py  game.py  json_manifest.py  manifest.py
custom_legendary/utils/: cli.py  custom_parser.py  lfs.py  manifests.py  savegame_helper.py  wine_helpers.py
docs/: index.md
legendary/: core.py
legendary/downloader/: manager.py
misc/: AppImageBuilder.yml  dmgbuild_settings.py  generate_version_name.py  mkversion.py  nuitka_build-pyside6.bat  nuitka_build-pyside6.sh  nuitka_build.bat  nuitka_build.ps1  nuitka_build.sh  nuitka_build_linux.sh  nuitka_build_macos.sh  nuitka_build_windows.ps1  nuitka_rare.bat  pip_upgrade_venv.py  py2ts.sh  pylint.sh  qrc2py-pyside6.sh  qrc2py.sh  rare.desktop  requirements-dev.in  requirements-flatpak.in  requirements-packaging.in  requirements-webview.in  requirements.in  ts2qm-pyside6.py  ts2qm.py  ui2py-pyside6.sh  ui2py.sh
rare/: App.py  __init__.py  __main__.py  app.py  main.py  mkrelease.py  shared.py
rare/commands/: subreaper.py  webview.py
rare/commands/launcher/: __init__.py  cloud_sync_dialog.py  console_dialog.py  lgd_helper.py
rare/commands/subreaper/: __init__.py  subreaper_bsd.py  subreaper_linux.py  util.py
rare/components/: TabUtils.py  __init__.py  main_window.py  tab_utils.py  tab_widget.py  tray_icon.py
rare/components/dialogs/: __init__.py  cloud_save_dialog.py  install_dialog.py  launch.py  launch_dialog.py  move.py  move_dialog.py  path_input_dialog.py  selective.py  selective_dialog.py  uninstall.py  uninstall_dialog.py
rare/game_launch_helper/: __init__.py  console.py  lgd_helper.py  message_models.py
rare/languages/: de.qm  de.ts  fr.qm  fr.ts  placeholder.ts
rare/launcher/: __init__.py  cloud_sync_dialog.py  console.py  console_dialog.py  lgd_helper.py
rare/lgndr/: __init__.py  api_arguments.py  api_exception.py  api_monkeys.py  cli.py  core.py  downloading.py  exception.py  manager.py
rare/models/: __init__.py  apiresults.py  base_game.py  enumerations.py  game.py  game_slim.py  image.py  install.py  launcher.py  library.py  options.py  pathspec.py  settings.py  signals.py  steam.py  wrapper.py
rare/resources/: __init__.py  resources.py  resources.qrc
rare/shared/: __init__.py  cloud_save_utils.py  game_process.py  game_utils.py  image_manager.py  rare_core.py  wrappers.py
rare/styles/: RareStyle.qss
rare/utils/: config_helper.py  discord_rpc.py  download_manager.py  extra_widgets.py  game_process_helper.py  get_grade.py  get_id.py  id.py  json_formatter.py  legendary_utils.py  meta.py  metrics.py  misc.py  models.py  pathedit_ui.py  paths.py  proton.py  qrequests.py  qt_requests.py  rpc.py  singleton.py  slot_adapters.py  steam_grades.py  steam_shortcuts.py  utils.py  wine.py  workarounds.py  wrapper_exe.py
rare/webview/: __init__.py
rare/widgets/: __init__.py  button_edit.py  collabsible_widget.py  collapsible_widget.py  dialogs.py  elide_label.py  flow_layout.py  image_widget.py  indicator_edit.py  library_layout.py  loading_widget.py  rare_app.py  rare_style.py  selective_widget.py  side_tab.py  sliding_stack.py
scripts/: py2ts.sh  pylint.sh  ts2qm.py  ui2py.sh
tools/: generate_version_name.py  pip_upgrade_venv.py  py2ts.sh  qrc2py.sh  run_uic.py  ts2qm.py  ui2py.sh  version.py
(+482 files in other folders)
