[project]
name = "Rare"
dynamic = ["version"]
authors = [
    { name = "Dummerle", email = "44114474+Dummerle@users.noreply.github.com" },
    { name = "loathingKernel", email = "142770+loathingKernel@users.noreply.github.com" },
]
maintainers = [
    { name = "loathingKernel", email = "142770+loathingKernel@users.noreply.github.com" },
]
description = "Open source alternative for Epic Games Launcher, using Legendary"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
requires-python = ">= 3.10"
dependencies = [
    "requests < 3.0",
    "PySide6-Essentials >= 6.8.1",
    "QtAwesome",
    "legendary-gl @ git+https://github.com/RareDevs/legendary@207b859ae4476ae77466d3c922efaba90e093f12",
    "orjson",
    "vdf @ https://github.com/solsticegamestudios/vdf/archive/be1f7220238022f8b29fe747f0b643f280bfdb6e.zip",
    "pywin32 ; platform_system == 'Windows'",
]

[project.optional-dependencies]
webview = [
    "pywebview[gtk]; platform_system == 'Linux'",
    "pywebview[gtk]; platform_system == 'FreeBSD'",
    "pythonnet; platform_system == 'Windows'",
    "pywebview; platform_system == 'Windows'",
    "pyobjc; platform_system == 'Darwin'",
    "pywebview; platform_system == 'Darwin'",
]
discordrpc = [
    "pypresence",
]
dev = [
    "pylint",
    "mypy",
    "black[d]",
    "PySide6-stubs",
    "qstylizer",
    "ruff",
]
packaging = [
    "cx-freeze",
    "nuitka",
    "pyinstaller",
]

[project.urls]
Homepage = "https://raredevs.github.io/Rare/"
Repository = "https://github.com/RareDevs/Rare"
Issues = "https://github.com/RareDevs/Rare/issues"

[project.gui-scripts]
rare = "rare.main:main"

[build-system]
requires = [ "setuptools>=64", "setuptools-scm[toml]>=8", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "rare*" ]
exclude = [ ".github*", ".tx*", "docs*" ]
namespaces = true

[tool.setuptools.package-data]
"rare.resources.images" = [ "Rare.ico", "Rare.icns", "Rare.png", "Rare.svg", "cover.png", "epic.png", "logo.png" ]
"rare.resources.languages" = [ "rare_*.qm" ]

[tool.setuptools.dynamic]
version = { attr = "rare.__version__" }

[tool.setuptools_scm]
# use only annotated tags ( omit `--tags` argument from `git describe`)
git_describe_command = [ "git", "describe", "--dirty", "--long" ]
#tag_regex = "(?P<version>^[0-9]+\\.[0-9]+\\.[0-9]+)(?P<suffix>.[0-9]+)?$"
#version_scheme = "misc.mkversion:mknumeric"
local_scheme = "no-local-version"
version_file = "rare/_version.py"
fallback_version = "1.12.0.0"

[tool.nuitka]
assume-yes-for-downloads = true
show-scons = true
mingw64 = true
lto = false
jobs = 4
static-libpython = false
standalone = true
enable-plugin = ["anti-bloat", "pyside6", "multiprocessing"]
show-anti-bloat-changes = true
follow-stdlib = true
follow-imports = true
nofollow-import-to = ["*.tests", "*.distutils", "distutils", "unittest", "pydoc", "tkinter", "test"]
prefer-source-code = true
include-package = "pypresence"
include-package-data = "qtawesome"
include-data-dir = "rare/resources/images/=rare/resources/images/"
include-data-files = "rare/resources/languages/=rare/resources/laguanges/=rare_*.qm"
output-filename = "Rare.exe"
file-description = "Rare.exe"
company-name = "RareDevs"
product-name = "Rare"
file-version = "1.12.0.0"
product-version = "1.12.0.0"
windows-console-mode = "disable"
windows-icon-from-ico = "rare/resources/images/Rare.ico"

[tool.black]
line-length = 130
indent-width = 4
include = '\.py$'
force-exclude = '''
/(
    | rare/ui
    | rare/lgndr
    | rare/resources
)/
'''

[tool.ruff]
include = ["pyproject.toml", "rare/*.py"]
exclude = [
    "rare/ui",
    "rare/lgndr",
    "rare/resources/static_css/__init__.py",
    "rare/resources/stylesheets/*/__init__.py"
]

line-length = 130
indent-width = 4

[tool.ruff.lint]
extend-select = ["E",  "F",  "UP",  "B",  "SIM", "I"]
extend-ignore = [ "UP008", "SIM102", "SIM108", "E501" ]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
